--- a/source/_posts/约瑟夫问题.md
+++ b/source/_posts/约瑟夫问题.md
@@ -8,7 +8,7 @@ categories:
     - 数据结构
 keywords: "数据结构,链表,Java"
 top_img:
-cover: https://i.loli.net/2019/11/10/T7Mu8Aod3egmC4Q.png
+cover: 
 ---
 # Josephu(约瑟夫、约瑟夫环)
 
@@ -16,7 +16,7 @@ cover: https://i.loli.net/2019/11/10/T7Mu8Aod3egmC4Q.png
 
 设编号为 1，2，… n 的 n 个人围坐一圈，约定编号为 k（1<=k<=n）的人从 1 开始报数，数到 m 的那个人出列，它的下一位又从 1 开始报数，数到 m 的那个人又出列，依次类推，直到所有人出列为止，由此产生一个出队编号的序列。
 
-![image-20220726203131699](http://mml-img.test.upcdn.net/img/202207262031853.png)
+![image-20220726203131699](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271415198.png)
 
 ### 提示
 
@@ -170,7 +170,7 @@ class Boy {
 >
 > 2->4->1->5->3
 
-![image-20220726203521921](http://mml-img.test.upcdn.net/img/202207262035984.png)
+![image-20220726203521921](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271415165.png)
 
 1. 需求创建一个辅助指针(变量) helper , 事先应该指向环形链表的最后这个节点.
 
