--- a/source/_posts/栈.md
+++ b/source/_posts/栈.md
@@ -11,6 +11,276 @@ top_img: https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271916665.png
 cover:
 ---
 
+------
 
+## 栈(stack)
 
-![image-20220727191637606](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271916665.png)
+### 栈的介绍
+
+1.  栈的英文为**(stack)**
+
+2. 栈是一个先入后出**(FILO-First In Last Out)**的有序列表。
+
+3. 栈**(stack)**是限制线性表中元素的插入和删除只能在线性表的同一端进行的一种特殊线性表。允许插入和删除的一端，为变化的一端，称为栈顶**(Top)**，另一端为固定的一端，称为栈底**(Bottom)**。
+
+4. 根据栈的定义可知，最先放入栈中元素在栈底，最后放入的元素在栈顶，而删除元素刚好相反，最后放入的元素最先删除，最先放入的元素最后删除
+
+5. 图解方式说明出栈**(pop)**和入栈**(push)**的概念
+
+   ![image-20220727220854980](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207272208027.png)
+
+{% tabs stack %}
+
+<!-- tab 使用数组模拟栈 -->
+
+### 使用数组模拟栈
+
+#### 思路分析
+
+1. 使用数组来模拟栈
+
+2. 定义一个 top 来表示栈顶，初始化 为 -1
+
+3. 入栈的操作，当有数据加入到栈时， top++; stack[top] = data;
+
+4. 出栈的操作， int value = stack[top]; top--, return value
+
+![数组模拟战的思路分析图](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271916665.png)
+
+#### 代码实现
+
+1. 数据创建一个栈
+
+   ```java
+   class ArrayStack {
+       //栈的大小
+       private Integer maxSize;
+       //数组模拟栈 数据放在数组中
+       private Integer[] stack;
+       //表示栈顶
+       private Integer top;
+   
+       public ArrayStack(Integer maxSize) {
+           this.maxSize = maxSize;
+           //初始化栈的大小
+           stack = new Integer[maxSize];
+           top = -1;
+       }
+   
+   }
+   ```
+
+2. 判断栈是否为空
+
+   ```java
+       public Boolean isEmpty() {
+           return top < 0;
+       }
+   ```
+
+3. 判断栈是否满了
+
+   ```java
+       public Boolean isFull() {
+           return top >= maxSize - 1;
+       }
+   ```
+
+4. 入栈
+
+   ```java
+    public void push(Integer num) {
+           if (isFull()) {
+               System.out.println("栈已满 不能在加！");
+               return;
+           }
+           stack[++top] = num;
+       }
+   ```
+
+5. 出栈
+
+   ```java
+    public Integer pop() {
+           if (isEmpty()) {
+               throw new RuntimeException("栈中没有元素");
+           }
+           Integer num = stack[top--];
+           return num;
+       }
+   ```
+
+6. 遍历栈
+
+   ```java
+    public void show() {
+           if (isEmpty()) {
+               System.out.println("栈中没有元素");
+               return;
+           }
+           for (Integer i = top; i >= 0; i--) {
+               System.out.println(stack[i]);
+           }
+       }
+   ```
+
+#### 代码测试
+
+```java
+public static void main(String[] args) {
+    //测试一下 ArrayStack 是否正确
+    //先创建一个 ArrayStack 对象->表示栈
+    ArrayStack stack = new ArrayStack(4);
+    String key = "";
+    boolean loop = true; //控制是否退出菜单
+    Scanner scanner = new Scanner(System.in);
+
+    while (loop) {
+        System.out.println("show: 表示显示栈");
+        System.out.println("exit: 退出程序");
+        System.out.println("push: 表示添加数据到栈(入栈)");
+        System.out.println("pop: 表示从栈取出数据(出栈)");
+        System.out.println("请输入你的选择");
+        key = scanner.next();
+        switch (key) {
+            case "show":
+                stack.show();
+                break;
+            case "push":
+                System.out.println("请输入一个数");
+                int value = scanner.nextInt();
+                stack.push(value);
+                break;
+            case "pop":
+                try {
+                    int res = stack.pop();
+                    System.out.printf("出栈的数据是 %d\n", res);
+                } catch (Exception e) {
+                    System.out.println(e.getMessage());
+                }
+                break;
+            case "exit":
+                scanner.close();
+                loop = false;
+                break;
+            default:
+                break;
+        }
+    }
+    System.out.println("程序退出~~~");
+}
+```
+
+<!-- endtab -->
+
+<!-- tab 链表实现栈 -->
+
+### 链表实现栈
+
+#### 思路
+
+> 用链表实现栈的先进后出，实现栈的push，pop，peak方法。主要就是利用链表的头结点作为栈顶的元素。
+
+1. 当要push的时候，相当于新new一个头结点，然后让新节点指向单链表的头结点。以新节点作为单链表的头节点即可。
+2. 当要pop的时候，只要将链表的头指针后移到它的next，将next作为新的头结点即可
+3. 当要peak的时候，只要返回头结点的值就好了。
+
+#### 代码实现
+
+1. 创建节点类
+
+   ```java
+   
+   class ListNode {
+       public Integer num;
+       public ListNode next;
+   
+       public ListNode() {
+       }
+   
+       public ListNode(Integer num) {
+           this.num = num;
+       }
+   
+       @Override
+       public String toString() {
+           return "ListNode{" +
+                   "num=" + num +
+                   '}';
+       }
+   }
+   ```
+
+2. 创建链表
+
+   ```java
+   class StackLinked {
+       //创建一个带头结点的链表 记录头指针位置
+       private ListNode head = new ListNode();
+   }
+   ```
+
+3. 判断栈是否为空
+
+   ```java
+   public Boolean isEmpty() {
+       return head.next==null;
+   }
+   ```
+
+4. 入栈
+
+   ```java
+   public void push(ListNode node) {
+       ListNode temp = head;
+   
+       if (temp.next == null) {
+           temp.next = node;
+           return;
+       }
+       node.next=temp.next;
+       temp.next=node;
+   }
+   ```
+
+5. 出栈
+
+   ```java
+   public ListNode pop() {
+       if (isEmpty()) {
+           throw new RuntimeException("链表栈为空！");
+       }
+       ListNode temp=head;
+       ListNode returnNode=temp.next;
+       temp.next=temp.next.next;
+       return returnNode;
+   }
+   ```
+
+6. 遍历链表栈
+
+   ```java
+   public void show() {
+       if (isEmpty()) {
+           System.out.println("链表栈为空");
+           return;
+       }
+       ListNode temp=head;
+       while (temp.next!=null){
+           temp=temp.next;
+           System.out.println(temp);
+       }
+   }
+   ```
+
+7. 返回栈顶元素
+
+   ```java
+   public ListNode peak(){
+       return head.next;
+   }
+   ```
+
+<!-- endtab -->
+
+{% endtabs %}
