--- a/source/_posts/栈.md
+++ b/source/_posts/栈.md
@@ -7,8 +7,8 @@ tags:
 categories:
   - 数据结构
 keywords: "栈,数据结构,Java"
-top_img: https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271916665.png
-cover:
+top_img: 
+cover: https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207271916665.png
 ---
 
 ## 栈(stack)
