--- a/source/_posts/栈.md
+++ b/source/_posts/栈.md
@@ -183,8 +183,8 @@ public static void main(String[] args) {
 
 > 用链表实现栈的先进后出，实现栈的push，pop，peak方法。主要就是利用链表的头结点作为栈顶的元素。
 
-1. 当要push的时候，相当于新new一个头结点，然后让{% lable 新节点指向单链表的头结点。以新节点作为单链表的头节点 red %}即可。
-2. 当要{% lable pop orange %}的时候，只要将链表的头指针后移到它的next，将next作为新的头结点即可
+1. 当要push的时候，相当于新new一个头结点，然后让{% label 新节点指向单链表的头结点。以新节点作为单链表的头节点 red %}即可。
+2. 当要{% labelpop orange %}的时候，只要将链表的头指针后移到它的next，将next作为新的头结点即可
 3. 当要peak的时候，只要返回头结点的值就好了。
 
 #### 代码实现
