--- a/source/_posts/栈实现综合计算器.md
+++ b/source/_posts/栈实现综合计算器.md
@@ -1,6 +1,7 @@
 ---
 title: 栈实现综合计算器
 date: 2022/7/28/10:33:00
+updated: 2022/7/28/23:47:00
 tags:
   - Java
   - 数据结构
@@ -8,7 +9,542 @@ categories:
   - 数据结构
 keywords: "栈,数据结构,Java"
 top_img: 
-cover: 
+cover: https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281849255.png
 ---
 
 # 栈实现综合计算器
+
+{% tabs calc,2 % }
+
+<!-- tab 前缀表达式 -->
+
+## 前缀表达式(波兰表达式)
+
+前缀表达式又称波兰式，**前缀表达式的运算符位于操作数之前**
+
+举例说明： (3+4)×5-6 对应的前缀表达式就是 **- × + 3 4 5 6**
+
+### **前缀表达式的计算机求值**
+
+从右至左扫描表达式，遇到数字时，将数字压入堆栈，遇到运算符时，弹出栈顶的两个数，用运算符对它们做相应的计算（栈顶元素 和 次顶元素），并将结果入栈；重复上述过程直到表达式最左端，最后运算得出的值即为表达式的结果
+
+
+
+例如: (3+4)×5-6 对应的前缀表达式就是 **- × + 3 4 5 6 ,** **针对前缀表达式求值步骤如下****:**
+
+
+
+1. 从**右至左扫描**，将6、5、4、3压入堆栈
+2. 遇到+运算符，因此弹出3和4（3为栈顶元素，4为次顶元素），计算出3+4的值，得7，再将7入栈
+3. 接下来是×运算符，因此弹出7和5，计算出7×5=35，将35入栈
+4. 最后是-运算符，计算出35-6的值，即29，由此得出最终结果
+
+<!-- endtab-->
+
+<!-- tab 中缀表达式 -->
+
+## 中缀表达式 
+
+1. 中缀表达式就是**常见的运算表达式**，如(3+4)×5-6
+2. 中缀表达式的求值是我们人最熟悉的，但是对计算机来说却不好操作(前面我们讲的案例就能看的这个问题)，因此，在计算结果时，往往会将中缀表达式转成其它表达式来操作(一般转成后缀表达式.)
+
+### 思路
+
+1. 通过一个 index 值（索引），来遍历我们的表达式
+
+2. 如果我们**发现是一个数字****,** 就直接入数栈
+
+3. 如果发现**扫描到是一个符号**,  就分如下情况
+
+   - 如果发现当前的符号栈为 空，就直接入栈
+
+   - 如果符号栈有操作符，就进行比较,如**果当前的操作符的优先级小于或者等于栈中的操作符**， 就需要从数栈中pop出两个数,在从符号栈中pop出一个符号，进行运算，将得到结果，入数栈，然后将当前的操作符入符号栈， 如**果当前的操作符的优先级****大于栈中的操作符， 就直接入符号栈.**
+
+4. **当表达式扫描完毕，就顺序的从 数栈和符号栈中****pop出相应的数和符号，并运行.
+
+5. **最后在数栈只有一个数字，就是表达式的结果**
+
+![image-20220728184213647](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281842750.png)
+
+![image-20220728184339117](C:\Users\杨三炮\AppData\Roaming\Typora\typora-user-images\image-20220728184339117.png)
+
+![image-20220728184513459](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281845495.png)
+
+![image-20220728184601278](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281846333.png)
+
+![image-20220728184643587](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281846673.png)
+
+![image-20220728184933178](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281849255.png)
+
+![image-20220728185002823](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281850905.png)
+
+![image-20220728185034214](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281850291.png)
+
+![image-20220728185212763](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281852802.png)
+
+![image-20220728185309845](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281853931.png)
+
+![image-20220728185400852](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281854892.png)
+
+![image-20220728185428745](https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281854780.png)
+
+### 代码实现
+
+#### 栈代码
+
+```java
+class ArrayStack2 {
+    //栈的大小
+    private Integer maxSize;
+    //数组模拟栈 数据放在数组中
+    private Integer[] stack;
+    //表示栈顶
+    public Integer top;
+
+
+    public ArrayStack2() {
+    }
+
+    public ArrayStack2(Integer maxSize) {
+        this.maxSize = maxSize;
+        //初始化栈的大小
+        stack = new Integer[maxSize];
+        top = -1;
+    }
+
+
+    /**
+     * 返回运算符的优先级 使用数字表示
+     * 数字越大  优先级越高
+     *
+     * @param oper 符号
+     * @return
+     */
+    public Integer priority(int oper) {
+        if (oper == '*' || oper == '/') {
+            return 1;
+        } else if (oper == '+' || oper == '-') {
+            return 0;
+        } else {
+            return -1;
+        }
+    }
+
+
+    /**
+     * 判断是不是运算符
+     *
+     * @param val
+     * @return
+     */
+    public Boolean isOper(char val) {
+        return val == '+' || val == '-' || val == '*' || val == '/';
+    }
+
+    //计算方法
+    public Integer calc(Integer num1, Integer num2, int oper) {
+        int res = 0;//存放计算的结果
+        switch (oper) {
+            case '+':
+                res = num1 + num2;
+                break;
+            case '-':
+                res = num2 - num1;
+                break;
+            case '*':
+                res = num1 * num2;
+                break;
+            case '/':
+                res = num2 / num1;
+                break;
+            default:
+                break;
+        }
+        return res;
+    }
+
+    public int peek() {
+        return stack[top];
+    }
+
+    /**
+     * 判断栈是否满
+     *
+     * @return
+     */
+    public Boolean isFull() {
+        return top >= maxSize - 1;
+    }
+
+    /**
+     * 判断栈是否为空
+     *
+     * @return
+     */
+    public Boolean isEmpty() {
+        return top < 0;
+    }
+
+
+    public void push(int num) {
+        if (isFull()) {
+            System.out.println("栈已满 不能在加！");
+            return;
+        }
+        stack[++top] = num;
+    }
+
+    public Integer pop() {
+        if (isEmpty()) {
+            throw new RuntimeException("栈中没有元素");
+        }
+        Integer num = stack[top--];
+        return num;
+    }
+
+    public void show() {
+        if (isEmpty()) {
+            System.out.println("栈中没有元素");
+            return;
+        }
+        for (Integer i = top; i >= 0; i--) {
+            System.out.println(stack[i]);
+        }
+    }
+}
+```
+
+#### 核心代码
+
+```java
+public static void main(String[] args) {
+    ArrayStack2 numStack = new ArrayStack2(10);
+    ArrayStack2 opeStack = new ArrayStack2(5);
+    String str = "20+2*8-16/1";
+    int num1;
+    int num2;
+    int oper;
+    char ch = ' ';
+    String keepNum = "";
+
+    int index = 0;  //遍历的次数
+    for (int i = 0; i < str.length(); i++) {
+        index++;
+        //获取str中第i个字符
+        ch = str.charAt(i);
+        //判断是不是一个字符
+        if (opeStack.isOper(ch)) {
+            //判断符号栈是否为空  如果是空的话直接压进去
+            if (opeStack.isEmpty()) {
+                opeStack.push(ch);
+            } else {
+                //不为空
+                //获取符号栈的头元素
+                int peek = opeStack.peek();
+                //计算出栈中头元素的优先级 和当前字符的优先级
+                Integer priority1 = opeStack.priority(peek);
+                Integer priority2 = opeStack.priority(ch);
+                //如果当前字符优先级大于栈中头元素  则直接把当前符号添加到栈中
+                if (priority2 > priority1) {
+                    opeStack.push(ch);
+                } else {
+                    //如果当前字符优先级小于栈中头元素
+                    //弹出字符栈中的头元素
+                    oper = opeStack.pop();
+                    //弹出数字栈中的两个元素
+                    num1 = numStack.pop();
+                    num2 = numStack.pop();
+                    //进行计算
+                    Integer calc = numStack.calc(num1, num2, oper);
+                    //计算之后的结果push到数字栈
+                    numStack.push(calc);
+                    //然后把当前字符push到字符栈中
+                    opeStack.push(ch);
+                }
+            }
+        } else {
+            //字符串拼接
+            keepNum += ch;
+            //如果遍历的次数大于等于字符串长度 则直接压进去 并且跳出循环
+            if (index >= str.length()) {
+                numStack.push(Integer.parseInt(keepNum));
+                break;
+            }
+            //判断下一个字符是不是符号  不是符号结束本次循环 开始下一次
+            if (numStack.isOper(str.charAt(i+1))) {
+                numStack.push(Integer.parseInt(keepNum));
+                keepNum = "";
+            }
+        }
+    }
+
+    //表达式扫描完毕后，就顺序的从数栈和符号中pop出相应的数和符号
+    //以数字栈中的元素作为循环条件  如果只剩下最后一个数 那么就是结果
+    while (numStack.top != 0) {
+        num1 = numStack.pop();
+        num2 = numStack.pop();
+        oper = opeStack.pop();
+        Integer calc = numStack.calc(num1, num2, oper);
+        numStack.push(calc);
+    }
+
+    System.out.printf("%s = %d", str, numStack.pop());
+    System.out.println();
+}
+```
+
+<!-- endtab -->
+
+
+
+<!-- tab 后缀表达式 -->
+
+## 后缀表达式(逆波兰表达式)
+
+1. 后缀表达式又称**逆波兰表达式**,与前缀表达式相似，只是运算符位于操作数之后
+
+2. 中举例说明： (3+4)×5-6 对应的后缀表达式就是 **3 4 + 5 × 6 –**
+
+3. 再比如:
+
+   | 正常的表达式 | 逆波兰表达式  |
+   | ------------ | ------------- |
+   | a+b          | a b +         |
+   | a+(b-c)      | a b c - +     |
+   | a+(b-c)*d    | a b c – d * + |
+   | a+d*(b-c)    | a d b c - * + |
+   | a=1+3        | a 1 3 + =     |
+
+### 后缀表达式的计算机求值
+
+
+
+**从左至右**扫描表达式，遇到数字时，将数字压入堆栈，遇到运算符时，弹出栈顶的两个数，用运算符对它们做相应的计算（次顶元素 和 栈顶元素），并将结果入栈；重复上述过程直到表达式最右端，最后运算得出的值即为表达式的结果
+
+
+
+例如: (3+4)×5-6 对应的后缀表达式就是 **3 4 + 5 × 6 - ,** **针对后缀表达式求值步骤如下****:**
+
+
+
+1. 从左至右扫描，将3和4压入堆栈；
+2. 遇到+运算符，因此弹出4和3（4为栈顶元素，3为次顶元素），计算出3+4的值，得7，再将7入栈；
+3. 将5入栈；
+4. 接下来是×运算符，因此弹出5和7，计算出7×5=35，将35入栈；
+5. 将6入栈；
+6. 最后是-运算符，计算出35-6的值，即29，由此得出最终结果 
+
+<!-- endtab -->
+
+
+
+<% endtabs %>
+
+### 逆波兰计算器
+
+1. 输入一个逆波兰表达式(后缀表达式)，使用栈(Stack),计算其结果
+
+2. 支持小括号和多位数整数，因为这里我们主要讲的是数据结构，因此计算器进行简化，只支持对整数的计算。
+
+3. 思路分析
+
+   例如: (3+4)×5-6 对应的后缀表达式就是 3 4 + 5 × 6 - , 针对后缀表达式求值步骤如下:
+
+   1. 从左至右扫描，将 3 和 4 压入堆栈；
+
+   2. 遇到+运算符，因此弹出 4 和 3（4 为栈顶元素，3 为次顶元素），计算出 3+4 的值，得 7，再将 7 入栈；
+
+   3. 将 5 入栈；
+   4. 接下来是×运算符，因此弹出 5 和 7，计算出 7×5=35，将 35 入栈；
+
+   5. 将 6 入栈；
+
+   6. 最后是-运算符，计算出 35-6 的值，即 29，由此得出最终结果
+
+4. 代码完成
+
+```java
+public static void main(String[] args) {
+    //要计算的逆波兰表达式
+    String suffixExpression = "4 5 * 8 - 60 + 8 2 / +";
+    //创建一个栈
+    Stack<String> stack = new Stack<>();
+    //
+    char ch = ' ';
+    //最后返回的结果
+    int res = 0;
+    //用来计数
+    int index = 0;
+    //用来连接数字 可能出现多位数
+    String str = "";
+    //小于表达式的长度
+    for (int i = 0; i < suffixExpression.length(); i++) {
+        index++;
+        //截取表达式第i个字符
+        ch = suffixExpression.charAt(i);
+        //判断字符是不是空  空的话直接跳过
+        if (ch == ' ') {
+            continue;
+        }
+        //判断字符是不是运算符
+        if (ch == '+' || ch == '-' || ch == '*' || ch == '/') {
+            //获取栈顶数据
+            int num2 = Integer.parseInt(String.valueOf(stack.pop()));
+            //获取栈次顶数据
+            int num1 = Integer.parseInt(String.valueOf(stack.pop()));
+            //判断是哪个运算符
+            switch (ch) {
+                case '+':
+                    res = num1 + num2;
+                    break;
+                case '-':
+                    res = num1 - num2;
+                    break;
+                case '*':
+                    res = num1 * num2;
+                    break;
+                case '/':
+                    res = num1 / num2;
+                    break;
+                default:
+                    System.out.println("检查一下运算符！");
+            }
+            //把算出来的结果继续压入栈
+            stack.push(String.valueOf(res));
+
+        } else {
+            //连接多个数字
+            str += ch;
+            //如果已经是最后一个字符了 则直接压入
+            if (index >= suffixExpression.length()) {
+                stack.push(str);
+                break;
+            }
+            //获取下一个字符
+            char c = suffixExpression.charAt(i + 1);
+            //判断下一个字符是不是 ’ ‘ 如果是的话就直接压入 不是的话结束本次循环 开始下一次
+            if (c == ' ') {
+                stack.push(str);
+                str = "";
+            }
+        }
+    }
+    //打印出栈中的结果
+    System.out.println(stack.pop());
+}
+```
+
+## 中缀表达式转换为后缀表达式
+
+> 大家看到，后缀表达式适合计算式进行运算，但是人却不太容易写出来，尤其是表达式很长的情况下，因此在开发中，我们需要将 **中缀表达式**转成**后缀表达式**。
+
+### 具体步骤如下
+
+1. 初始化两个栈：运算符栈s1和储存中间结果的栈s2；
+2. 从左至右扫描中缀表达式；
+3. 遇到操作数时，将其压s2；
+4. 遇到运算符时，比较其与s1栈顶运算符的优先级：
+   1. 如果s1为空，或栈顶运算符为左括号“(”，则直接将此运算符入栈；
+   2. 否则，若优先级比栈顶运算符的高，也将运算符压入s1；
+   3. 否则，将s1栈顶的运算符弹出并压入到s2中，再次转到(4-1)与s1中新的栈顶运算符相比较；
+5. 遇到括号时：
+   1. 如果是左括号“(”，则直接压入s1
+   2.  如果是右括号“)”，则依次弹出s1栈顶的运算符，并压入s2，直到遇到左括号为止，此时将这一对括号丢弃
+6. 重复步骤2至5，直到表达式的最右边
+7. 将s1中剩余的运算符依次弹出并压入s2
+8. 依次弹出s2中的元素并输出，**结果的逆序即为中缀表达式对应的后缀表达式**
+
+### 举例说明
+
+将中缀表达式	1+((2+3)×4)-5 
+
+转换为后缀表达式的过程如下
+
+| 扫描到的元素 | s2(栈底->栈顶)         | s1 (栈底->栈顶) | 说明                               |
+| ------------ | ---------------------- | --------------- | ---------------------------------- |
+| 1            | 1                      | 空              | 数字，直接入栈                     |
+| +            | 1                      | +               | s1为空，运算符直接入栈             |
+| (            | 1                      | + (             | 左括号，直接入栈                   |
+| (            | 1                      | + ( (           | 同上                               |
+| 2            | 1 2                    | + ( (           | 数字                               |
+| +            | 1 2                    | + ( ( +         | s1栈顶为左括号，运算符直接入栈     |
+| 3            | 1 2 3                  | + ( ( +         | 数字                               |
+| )            | 1 2 3 +                | + (             | 右括号，弹出运算符直至遇到左括号   |
+| ×            | 1 2 3 +                | + ( ×           | s1栈顶为左括号，运算符直接入栈     |
+| 4            | 1 2 3 + 4              | + ( ×           | 数字                               |
+| )            | 1 2 3 + 4 ×            | +               | 右括号，弹出运算符直至遇到左括号   |
+| -            | 1 2 3 + 4 × +          | -               | -与+优先级相同，因此弹出+，再压入- |
+| 5            | 1 2 3 + 4 × + 5        | -               | 数字                               |
+| 到达最右端   | **1  2 3 + 4 × + 5 -** | 空              | s1中剩余的运算符                   |
+
+**因此结果为** 
+
+**"1 2 3 + 4 × + 5 –"**
+
+
+
+### 代码实现
+
+```java
+public static void main(String[] args) {
+    //中缀表达式
+    String expression = "1+((2+3)*4)-5";
+    //创建两个栈
+    Stack<String> s1 = new Stack<>();
+    Stack<String> s2 = new Stack<>();
+    //保存表达式字符
+    char ch = ' ';
+    //连接多个数字
+    String str="";
+    //循环次数小于表达式长度
+    for (int i = 0; i < expression.length(); i++) {
+        //获取当前表达式的第 i个字符
+        ch = expression.charAt(i);
+        //判断是不是一个数字
+        if (Character.isDigit(ch)) {
+            //连接起来
+            str+=ch;
+            //判断是不是最后一个 或者 下一个字符是不是数字  满足条件直接push到s2中  否则直接结束本次
+            if (i==expression.length()-1||!Character.isDigit(expression.charAt(i+1))){
+                s2.push(str);
+                str="";
+            }
+            //如果是小括号 ( 直接压入s1
+        } else if (ch == '(' || s1.empty()) {
+            s1.push(String.valueOf(ch));
+            //如果是右括号
+        } else if (ch == ')') {
+            //把左括号之后的符号pop出来 并放入到s2中
+            while (s1.peek().charAt(0) != '(') {
+                s2.push(s1.pop());
+            }
+            //让左括号 pop出来
+            s1.pop();
+            //判断是不是运算符
+        } else if (ch == '+' || ch == '-' || ch == '*' || ch == '/') {
+            
+            while (true) {
+                //如过s1已经空了 或者 当前运算符优先级大于s1栈顶的优先级 则直接压入到s1
+                if (s1.isEmpty()|| priority(ch) > priority(s1.peek().charAt(0))) {
+                    s1.push(String.valueOf(ch));
+                    break;
+                }else {
+                    //如果优先级小于s1栈顶的优先级 则pop出s1栈顶运算符 push到s2中
+                    s2.push(s1.pop());
+                }
+            }
+
+        }
+    }
+    //如果循环结束  s1还有运算符则全部push到s2中
+    while (s1.size() > 0) {
+        s2.push(s1.pop());
+    }
+    //遍历出计算后的后缀表达式
+    for (int i=0;i<s2.size();i++){
+       str+=s2.get(i)+" ";
+    }
+    System.out.println(str);
+    calc(str);
+}
+```
