--- a/source/_posts/栈实现综合计算器.md
+++ b/source/_posts/栈实现综合计算器.md
@@ -14,7 +14,7 @@ cover: https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202207281849255.png
 
 # 栈实现综合计算器
 
-{% tabs calc,2 % }
+{% tabs calc, 2 %}
 
 <!-- tab 前缀表达式 -->
 
@@ -338,7 +338,7 @@ public static void main(String[] args) {
 
 
 
-<% endtabs %>
+{% endtabs %}
 
 ### 逆波兰计算器
 
