--- a/source/_posts/2022823-Oracle.md
+++ b/source/_posts/2022823-Oracle.md
@@ -1,5 +1,5 @@
 ---
-title: 排序
+title: Oracle
 date: 2022/8/23/15:10:00
 updated:
 tags:
@@ -10,7 +10,7 @@ categories:
   - SQL
 keywords: "数据库,SQL"
 top_img: 
-cover: 
+cover: https://cdn.jsdelivr.net/gh/wxy520/blogimg/img/202208242144783.png
 ---
 
 # Oracle
